examples/test/testpolicy772.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy772
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key43: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value38
          key17: value2
      podSelector:
        matchLabels:
          key37: value31
          key16: value3
          key3: value45
